--- a/adt_conversion.ipynb
+++ b/adt_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,14 +105,13 @@
        "4   80250 2021-01-01 00:15:00         N              1     2   20    NaN     4"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import xml.etree.ElementTree as ET\n",
     "from datetime import datetime\n",
     "\n",
     "#make into function later\n",
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +332,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,15 +370,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<flow id=\"080250_20210101_0000_LANE1\" begin=\"0\" end=\"900\" from=\"edge_in\" to=\"edge_out\" vehsPerHour=\"60\" speed=\"57.83\" departLane=\"free\"> </flow>\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>time_block</th>\n",
+       "      <th>LANE</th>\n",
+       "      <th>VOL1</th>\n",
+       "      <th>MPH_0_15</th>\n",
+       "      <th>MPH_15_25</th>\n",
+       "      <th>MPH_25_30</th>\n",
+       "      <th>MPH_30_35</th>\n",
+       "      <th>MPH_35_40</th>\n",
+       "      <th>MPH_40_45</th>\n",
+       "      <th>MPH_45_50</th>\n",
+       "      <th>MPH_50_55</th>\n",
+       "      <th>MPH_55_60</th>\n",
+       "      <th>MPH_60_65</th>\n",
+       "      <th>MPH_65_70</th>\n",
+       "      <th>MPH_70_75</th>\n",
+       "      <th>MPH_75_80</th>\n",
+       "      <th>MPH_80_85</th>\n",
+       "      <th>MPH_85_UP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24.622010</td>\n",
+       "      <td>0.047847</td>\n",
+       "      <td>0.076555</td>\n",
+       "      <td>0.071770</td>\n",
+       "      <td>0.047847</td>\n",
+       "      <td>0.153110</td>\n",
+       "      <td>0.511962</td>\n",
+       "      <td>1.339713</td>\n",
+       "      <td>4.038278</td>\n",
+       "      <td>5.937799</td>\n",
+       "      <td>7.248804</td>\n",
+       "      <td>3.406699</td>\n",
+       "      <td>1.272727</td>\n",
+       "      <td>0.392344</td>\n",
+       "      <td>0.066986</td>\n",
+       "      <td>0.009569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>65.870813</td>\n",
+       "      <td>0.014354</td>\n",
+       "      <td>0.028708</td>\n",
+       "      <td>0.086124</td>\n",
+       "      <td>0.066986</td>\n",
+       "      <td>0.095694</td>\n",
+       "      <td>0.186603</td>\n",
+       "      <td>0.392344</td>\n",
+       "      <td>1.229665</td>\n",
+       "      <td>3.315789</td>\n",
+       "      <td>9.837321</td>\n",
+       "      <td>20.023923</td>\n",
+       "      <td>19.425837</td>\n",
+       "      <td>9.110048</td>\n",
+       "      <td>1.827751</td>\n",
+       "      <td>0.229665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.990431</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.004785</td>\n",
+       "      <td>0.009569</td>\n",
+       "      <td>0.028708</td>\n",
+       "      <td>0.129187</td>\n",
+       "      <td>0.301435</td>\n",
+       "      <td>0.368421</td>\n",
+       "      <td>0.775120</td>\n",
+       "      <td>2.899522</td>\n",
+       "      <td>6.655502</td>\n",
+       "      <td>9.665072</td>\n",
+       "      <td>7.559809</td>\n",
+       "      <td>2.086124</td>\n",
+       "      <td>0.507177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.200957</td>\n",
+       "      <td>0.023923</td>\n",
+       "      <td>0.038278</td>\n",
+       "      <td>0.052632</td>\n",
+       "      <td>0.095694</td>\n",
+       "      <td>0.215311</td>\n",
+       "      <td>0.421053</td>\n",
+       "      <td>1.449761</td>\n",
+       "      <td>3.741627</td>\n",
+       "      <td>5.555024</td>\n",
+       "      <td>6.119617</td>\n",
+       "      <td>3.057416</td>\n",
+       "      <td>1.062201</td>\n",
+       "      <td>0.277512</td>\n",
+       "      <td>0.076555</td>\n",
+       "      <td>0.014354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>65.100478</td>\n",
+       "      <td>0.023923</td>\n",
+       "      <td>0.057416</td>\n",
+       "      <td>0.019139</td>\n",
+       "      <td>0.071770</td>\n",
+       "      <td>0.114833</td>\n",
+       "      <td>0.172249</td>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>0.985646</td>\n",
+       "      <td>3.210526</td>\n",
+       "      <td>10.459330</td>\n",
+       "      <td>20.373206</td>\n",
+       "      <td>18.875598</td>\n",
+       "      <td>8.641148</td>\n",
+       "      <td>1.497608</td>\n",
+       "      <td>0.282297</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      day time_block  LANE       VOL1  MPH_0_15  MPH_15_25  MPH_25_30  \\\n",
+       "0  Friday   00:00:00     1  24.622010  0.047847   0.076555   0.071770   \n",
+       "1  Friday   00:00:00     2  65.870813  0.014354   0.028708   0.086124   \n",
+       "2  Friday   00:00:00     3  30.990431  0.000000   0.000000   0.004785   \n",
+       "3  Friday   00:15:00     1  22.200957  0.023923   0.038278   0.052632   \n",
+       "4  Friday   00:15:00     2  65.100478  0.023923   0.057416   0.019139   \n",
+       "\n",
+       "   MPH_30_35  MPH_35_40  MPH_40_45  MPH_45_50  MPH_50_55  MPH_55_60  \\\n",
+       "0   0.047847   0.153110   0.511962   1.339713   4.038278   5.937799   \n",
+       "1   0.066986   0.095694   0.186603   0.392344   1.229665   3.315789   \n",
+       "2   0.009569   0.028708   0.129187   0.301435   0.368421   0.775120   \n",
+       "3   0.095694   0.215311   0.421053   1.449761   3.741627   5.555024   \n",
+       "4   0.071770   0.114833   0.172249   0.315789   0.985646   3.210526   \n",
+       "\n",
+       "   MPH_60_65  MPH_65_70  MPH_70_75  MPH_75_80  MPH_80_85  MPH_85_UP  \n",
+       "0   7.248804   3.406699   1.272727   0.392344   0.066986   0.009569  \n",
+       "1   9.837321  20.023923  19.425837   9.110048   1.827751   0.229665  \n",
+       "2   2.899522   6.655502   9.665072   7.559809   2.086124   0.507177  \n",
+       "3   6.119617   3.057416   1.062201   0.277512   0.076555   0.014354  \n",
+       "4  10.459330  20.373206  18.875598   8.641148   1.497608   0.282297  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -389,30 +565,60 @@
     "    \"MPH_75_80\": 77.5, \"MPH_80_85\": 82.5, \"MPH_85_UP\": 87.5\n",
     "}\n",
     "\n",
-    "start_time = speed_df[\"STARTDATE1\"].min() # for comparisons\n",
+    "speed_df[\"day\"] = speed_df[\"STARTDATE1\"].dt.day_name()\n",
+    "speed_df[\"time_block\"] = speed_df[\"STARTDATE1\"].dt.floor(\"15min\").dt.time\n",
+    "\n",
+    "grouped = speed_df.groupby([\"day\", \"time_block\", \"LANE\"]).agg({\n",
+    "    \"VOL1\": \"mean\",\n",
+    "    **{col: \"mean\" for col in speed_bins}  # average each speed bucket\n",
+    "}).reset_index()\n",
+    "\n",
+    "grouped.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<flow id=\"080250_Friday_0000_LANE1\" begin=\"0\" end=\"900\" from=\"edge_in\" to=\"edge_out\" vehsPerHour=\"98.49\" speed=\"59.38\" departLane=\"free\" />\n"
+     ]
+    }
+   ],
+   "source": [
     "# https://sumo.dlr.de/docs/Definition_of_Vehicles%2C_Vehicle_Types%2C_and_Routes.html#repeated_vehicles_flows\n",
     "flows = []\n",
-    "for _, row in speed_df.iterrows():\n",
-    "    timestamp = row[\"STARTDATE1\"]\n",
+    "for _, row in grouped.iterrows():\n",
+    "    day = row[\"day\"]\n",
+    "    time_block = row[\"time_block\"]\n",
     "    lane = int(row[\"LANE\"])\n",
     "    vol = row[\"VOL1\"]\n",
-    "    begin = int((timestamp - start_time).total_seconds())\n",
-    "    end = begin + 900  # 15 min interval\n",
-    "    vehsPerHour = vol * 4\n",
+    "    vehsPerHour = round(vol * 4, 2)\n",
     "\n",
+    "    # Compute average speed\n",
     "    total_cars = 0\n",
     "    weighted_speed = 0\n",
     "    for col, mph in speed_bins.items():\n",
     "        count = row[col]\n",
     "        total_cars += count\n",
     "        weighted_speed += count * mph\n",
-    "\n",
     "    if total_cars == 0:\n",
-    "        continue # avoid divide by 0 or putting in an empty flow\n",
-    "    avg_speed = weighted_speed / total_cars\n",
+    "        continue\n",
+    "    avg_speed = round(weighted_speed / total_cars, 2)\n",
     "\n",
-    "    flow_id = f\"{station_id}_{timestamp.strftime('%Y%m%d_%H%M')}_LANE{lane}\"\n",
-    "    flow = f'<flow id=\"{flow_id}\" begin=\"{begin}\" end=\"{end}\" from=\"edge_in\" to=\"edge_out\" vehsPerHour=\"{round(vehsPerHour,2)}\" speed=\"{round(avg_speed,2)}\" departLane=\"free\"> </flow>'\n",
+    "    # Convert time to seconds since midnight\n",
+    "    begin = time_block.hour * 3600 + time_block.minute * 60\n",
+    "    end = begin + 900  # 15-minute interval\n",
+    "\n",
+    "    flow_id = f\"{station_id}_{day}_{time_block.strftime('%H%M')}_LANE{lane}\"\n",
+    "    flow = (\n",
+    "        f'<flow id=\"{flow_id}\" begin=\"{begin}\" end=\"{end}\" from=\"edge_in\" to=\"edge_out\" '\n",
+    "        f'vehsPerHour=\"{vehsPerHour}\" speed=\"{avg_speed}\" departLane=\"free\" />'\n",
+    "    )\n",
     "    flows.append(flow)\n",
     "\n",
     "print(flows[0])"
